[#39232781] Fix floating alignment of OPAC footer

--- a/koha-tmpl/opac-tmpl/prog/en/css/opac.css
+++ b/koha-tmpl/opac-tmpl/prog/en/css/opac.css
@@ -1370,6 +1370,10 @@ div#changelanguage li.yuimenuitem a.yuimenuitemlabel {
 	padding : inherit;
 }
 
+.ft {
+	clear: both;
+}
+
 #login #userid, #login #password {
 	width : 98%;	
 }
